--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/photo_app
 spring.datasource.username=azhar
 spring.datasource.password=azhar
 spring.jpa.hibernate.ddl-auto=update
-
+tokenSecret="jf9i4jgu83nfl0"
 
